test/success/std/instances/implied_bounds/main.sk
module Main {

trait Foo[T] {
    fn foo(t: T) -> ()
}

trait[T: Foo[T]] Bar[T] {
    fn bar(t: T) -> ()
}

fn baz[T: Bar[T]](t: T) {
    bar(t);
    foo(t);
}

instance Foo[Int] {
    fn foo(t: Int) -> () {
    }
}

instance Bar[Int] {
    fn bar(t: Int) -> () {
    }
}

fn main() {
    let a = 1;
    baz(a);
}


}