test/errors/traits/invalid_instance_member/main.sk
module Main {

struct Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
}

instance Bar[Foo] {
    fn bar(self) -> () {

    }

    fn baz() {

    }
}

fn main() {
}

}